feat: support multiple business workspaces
